clang/test/BSC/Negative/NullabilityCheck/cast_nullable/cast_nullable.cbs
// RUN: %clang_cc1 -verify %s

_Safe T *_Owned safe_malloc<T>(T t);
_Safe void safe_free(void *_Owned p);

_Safe void test1(void) {
    int *_Owned _Nullable p = nullptr;
    int cond = 1;
    if (cond) {
        p = safe_malloc<int>(10);
        *p = 10;
    }
    safe_free((void *_Owned)p);      // expected-error{{cannot cast nullable pointer to nonnull type}}
}
